# vertexagents-crm

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
accounts/: admin.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_seed_dev_users.py
accounts/tests/: test_lockout.py  test_models.py  test_views.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
core/: admin.py  factories.py  models.py
core/migrations/: 0001_initial.py  0002_remove_account_consolidate_to_accounts_app.py
core/services/: leads.py  opportunities.py
crm/: admin.py  forms.py  managers.py  models.py  settings.py  urls.py  urls_accounts.py  urls_contacts.py  wsgi.py
crm/migrations/: 0001_initial.py
crm/tests/: conftest.py  test_constraints.py  test_contacts.py  test_soft_delete.py  test_str.py
crm/views/: __init__.py  accounts.py  activity.py  contacts.py  leads.py  opportunities.py
crm_app/: admin.py  forms.py  models.py  services.py  urls.py  views.py
crm_app/migrations/: 0001_initial.py
crm_app/tests/: test_services.py  test_views.py
crm_project/: settings.py  urls.py  wsgi.py
leads/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
leads/migrations/: 0001_initial.py
templates/: base.html  dashboard.html
templates/accounts/: _field.html  _options.html  confirm_delete.html  delete_confirm.html  detail.html  (+2 more)
tests/: test_activity.py
(+30 files in other folders)
